refactor: user service
