# packages/openapi/src/fetch/auth/auth/apis/AuthServiceApi.ts
@@ -1,116 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * auth/auth.proto
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * The version of the OpenAPI document: version not set
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-
-import * as runtime from '../runtime';
-import type {
-  AuthAuthorizeResponse,
-  AuthTokenRequest,
-  AuthTokenResponse,
-  RpcStatus,
-} from '../models';
-import {
-    AuthAuthorizeResponseFromJSON,
-    AuthAuthorizeResponseToJSON,
-    AuthTokenRequestFromJSON,
-    AuthTokenRequestToJSON,
-    AuthTokenResponseFromJSON,
-    AuthTokenResponseToJSON,
-    RpcStatusFromJSON,
-    RpcStatusToJSON,
-} from '../models';
-
-export interface AuthServiceAuthorizeRequest {
-    clientId?: string;
-    responseType?: string;
-    redirectUri?: string;
-}
-
-export interface AuthServiceTokenRequest {
-    body: AuthTokenRequest;
-}
-
-/**
- * 
- */
-export class AuthServiceApi extends runtime.BaseAPI {
-
-    /**
-     */
-    async authServiceAuthorizeRaw(requestParameters: AuthServiceAuthorizeRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<AuthAuthorizeResponse>> {
-        const queryParameters: any = {};
-
-        if (requestParameters.clientId !== undefined) {
-            queryParameters['clientId'] = requestParameters.clientId;
-        }
-
-        if (requestParameters.responseType !== undefined) {
-            queryParameters['responseType'] = requestParameters.responseType;
-        }
-
-        if (requestParameters.redirectUri !== undefined) {
-            queryParameters['redirectUri'] = requestParameters.redirectUri;
-        }
-
-        const headerParameters: runtime.HTTPHeaders = {};
-
-        const response = await this.request({
-            path: `/auth.auth.AuthService/authorize`,
-            method: 'GET',
-            headers: headerParameters,
-            query: queryParameters,
-        }, initOverrides);
-
-        return new runtime.JSONApiResponse(response, (jsonValue) => AuthAuthorizeResponseFromJSON(jsonValue));
-    }
-
-    /**
-     */
-    async authServiceAuthorize(requestParameters: AuthServiceAuthorizeRequest = {}, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<AuthAuthorizeResponse> {
-        const response = await this.authServiceAuthorizeRaw(requestParameters, initOverrides);
-        return await response.value();
-    }
-
-    /**
-     */
-    async authServiceTokenRaw(requestParameters: AuthServiceTokenRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<AuthTokenResponse>> {
-        if (requestParameters.body === null || requestParameters.body === undefined) {
-            throw new runtime.RequiredError('body','Required parameter requestParameters.body was null or undefined when calling authServiceToken.');
-        }
-
-        const queryParameters: any = {};
-
-        const headerParameters: runtime.HTTPHeaders = {};
-
-        headerParameters['Content-Type'] = 'application/json';
-
-        const response = await this.request({
-            path: `/auth.auth.AuthService/token`,
-            method: 'POST',
-            headers: headerParameters,
-            query: queryParameters,
-            body: AuthTokenRequestToJSON(requestParameters.body),
-        }, initOverrides);
-
-        return new runtime.JSONApiResponse(response, (jsonValue) => AuthTokenResponseFromJSON(jsonValue));
-    }
-
-    /**
-     */
-    async authServiceToken(requestParameters: AuthServiceTokenRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<AuthTokenResponse> {
-        const response = await this.authServiceTokenRaw(requestParameters, initOverrides);
-        return await response.value();
-    }
-
-}
