# packages/openapi/src/fetch/wx/user/apis/UserServiceApi.ts
@@ -1,316 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * wx/user.proto
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * The version of the OpenAPI document: version not set
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-
-import * as runtime from '../runtime';
-import type {
-  RpcStatus,
-  UserGetByUserIdResponse,
-  UserInfoResponse,
-  UserServiceUpdateRequest,
-  WxuserCreateRequest,
-  WxuserCreateResponse,
-  WxuserGetResponse,
-  WxuserListResponse,
-  WxuserLoginRequest,
-  WxuserLoginResponse,
-  WxuserUpdateResponse,
-} from '../models';
-import {
-    RpcStatusFromJSON,
-    RpcStatusToJSON,
-    UserGetByUserIdResponseFromJSON,
-    UserGetByUserIdResponseToJSON,
-    UserInfoResponseFromJSON,
-    UserInfoResponseToJSON,
-    UserServiceUpdateRequestFromJSON,
-    UserServiceUpdateRequestToJSON,
-    WxuserCreateRequestFromJSON,
-    WxuserCreateRequestToJSON,
-    WxuserCreateResponseFromJSON,
-    WxuserCreateResponseToJSON,
-    WxuserGetResponseFromJSON,
-    WxuserGetResponseToJSON,
-    WxuserListResponseFromJSON,
-    WxuserListResponseToJSON,
-    WxuserLoginRequestFromJSON,
-    WxuserLoginRequestToJSON,
-    WxuserLoginResponseFromJSON,
-    WxuserLoginResponseToJSON,
-    WxuserUpdateResponseFromJSON,
-    WxuserUpdateResponseToJSON,
-} from '../models';
-
-export interface UserServiceCreateRequest {
-    body: WxuserCreateRequest;
-}
-
-export interface UserServiceDeleteRequest {
-    id: string;
-}
-
-export interface UserServiceGetRequest {
-    id: string;
-}
-
-export interface UserServiceGetByUserIdRequest {
-    userId: string;
-}
-
-export interface UserServiceLoginRequest {
-    body: WxuserLoginRequest;
-}
-
-export interface UserServiceUpdateOperationRequest {
-    id: string;
-    body: UserServiceUpdateRequest;
-}
-
-/**
- * 
- */
-export class UserServiceApi extends runtime.BaseAPI {
-
-    /**
-     */
-    async userServiceCreateRaw(requestParameters: UserServiceCreateRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<WxuserCreateResponse>> {
-        if (requestParameters.body === null || requestParameters.body === undefined) {
-            throw new runtime.RequiredError('body','Required parameter requestParameters.body was null or undefined when calling userServiceCreate.');
-        }
-
-        const queryParameters: any = {};
-
-        const headerParameters: runtime.HTTPHeaders = {};
-
-        headerParameters['Content-Type'] = 'application/json';
-
-        const response = await this.request({
-            path: `/wx.user.UserService/users`,
-            method: 'POST',
-            headers: headerParameters,
-            query: queryParameters,
-            body: WxuserCreateRequestToJSON(requestParameters.body),
-        }, initOverrides);
-
-        return new runtime.JSONApiResponse(response, (jsonValue) => WxuserCreateResponseFromJSON(jsonValue));
-    }
-
-    /**
-     */
-    async userServiceCreate(requestParameters: UserServiceCreateRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<WxuserCreateResponse> {
-        const response = await this.userServiceCreateRaw(requestParameters, initOverrides);
-        return await response.value();
-    }
-
-    /**
-     */
-    async userServiceDeleteRaw(requestParameters: UserServiceDeleteRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<object>> {
-        if (requestParameters.id === null || requestParameters.id === undefined) {
-            throw new runtime.RequiredError('id','Required parameter requestParameters.id was null or undefined when calling userServiceDelete.');
-        }
-
-        const queryParameters: any = {};
-
-        const headerParameters: runtime.HTTPHeaders = {};
-
-        const response = await this.request({
-            path: `/wx.user.UserService/users/{id}`.replace(`{${"id"}}`, encodeURIComponent(String(requestParameters.id))),
-            method: 'DELETE',
-            headers: headerParameters,
-            query: queryParameters,
-        }, initOverrides);
-
-        return new runtime.JSONApiResponse<any>(response);
-    }
-
-    /**
-     */
-    async userServiceDelete(requestParameters: UserServiceDeleteRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<object> {
-        const response = await this.userServiceDeleteRaw(requestParameters, initOverrides);
-        return await response.value();
-    }
-
-    /**
-     */
-    async userServiceGetRaw(requestParameters: UserServiceGetRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<WxuserGetResponse>> {
-        if (requestParameters.id === null || requestParameters.id === undefined) {
-            throw new runtime.RequiredError('id','Required parameter requestParameters.id was null or undefined when calling userServiceGet.');
-        }
-
-        const queryParameters: any = {};
-
-        const headerParameters: runtime.HTTPHeaders = {};
-
-        const response = await this.request({
-            path: `/wx.user.UserService/users/{id}`.replace(`{${"id"}}`, encodeURIComponent(String(requestParameters.id))),
-            method: 'GET',
-            headers: headerParameters,
-            query: queryParameters,
-        }, initOverrides);
-
-        return new runtime.JSONApiResponse(response, (jsonValue) => WxuserGetResponseFromJSON(jsonValue));
-    }
-
-    /**
-     */
-    async userServiceGet(requestParameters: UserServiceGetRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<WxuserGetResponse> {
-        const response = await this.userServiceGetRaw(requestParameters, initOverrides);
-        return await response.value();
-    }
-
-    /**
-     */
-    async userServiceGetByUserIdRaw(requestParameters: UserServiceGetByUserIdRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<UserGetByUserIdResponse>> {
-        if (requestParameters.userId === null || requestParameters.userId === undefined) {
-            throw new runtime.RequiredError('userId','Required parameter requestParameters.userId was null or undefined when calling userServiceGetByUserId.');
-        }
-
-        const queryParameters: any = {};
-
-        const headerParameters: runtime.HTTPHeaders = {};
-
-        const response = await this.request({
-            path: `/wx.user.UserService/users/userId/{userId}`.replace(`{${"userId"}}`, encodeURIComponent(String(requestParameters.userId))),
-            method: 'GET',
-            headers: headerParameters,
-            query: queryParameters,
-        }, initOverrides);
-
-        return new runtime.JSONApiResponse(response, (jsonValue) => UserGetByUserIdResponseFromJSON(jsonValue));
-    }
-
-    /**
-     */
-    async userServiceGetByUserId(requestParameters: UserServiceGetByUserIdRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<UserGetByUserIdResponse> {
-        const response = await this.userServiceGetByUserIdRaw(requestParameters, initOverrides);
-        return await response.value();
-    }
-
-    /**
-     */
-    async userServiceInfoRaw(initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<UserInfoResponse>> {
-        const queryParameters: any = {};
-
-        const headerParameters: runtime.HTTPHeaders = {};
-
-        const response = await this.request({
-            path: `/wx.user.UserService/info`,
-            method: 'POST',
-            headers: headerParameters,
-            query: queryParameters,
-        }, initOverrides);
-
-        return new runtime.JSONApiResponse(response, (jsonValue) => UserInfoResponseFromJSON(jsonValue));
-    }
-
-    /**
-     */
-    async userServiceInfo(initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<UserInfoResponse> {
-        const response = await this.userServiceInfoRaw(initOverrides);
-        return await response.value();
-    }
-
-    /**
-     */
-    async userServiceListRaw(initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<WxuserListResponse>> {
-        const queryParameters: any = {};
-
-        const headerParameters: runtime.HTTPHeaders = {};
-
-        const response = await this.request({
-            path: `/wx.user.UserService/users`,
-            method: 'GET',
-            headers: headerParameters,
-            query: queryParameters,
-        }, initOverrides);
-
-        return new runtime.JSONApiResponse(response, (jsonValue) => WxuserListResponseFromJSON(jsonValue));
-    }
-
-    /**
-     */
-    async userServiceList(initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<WxuserListResponse> {
-        const response = await this.userServiceListRaw(initOverrides);
-        return await response.value();
-    }
-
-    /**
-     * 小程序登录, 返回oauth的token
-     */
-    async userServiceLoginRaw(requestParameters: UserServiceLoginRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<WxuserLoginResponse>> {
-        if (requestParameters.body === null || requestParameters.body === undefined) {
-            throw new runtime.RequiredError('body','Required parameter requestParameters.body was null or undefined when calling userServiceLogin.');
-        }
-
-        const queryParameters: any = {};
-
-        const headerParameters: runtime.HTTPHeaders = {};
-
-        headerParameters['Content-Type'] = 'application/json';
-
-        const response = await this.request({
-            path: `/wx.user.UserService/login`,
-            method: 'POST',
-            headers: headerParameters,
-            query: queryParameters,
-            body: WxuserLoginRequestToJSON(requestParameters.body),
-        }, initOverrides);
-
-        return new runtime.JSONApiResponse(response, (jsonValue) => WxuserLoginResponseFromJSON(jsonValue));
-    }
-
-    /**
-     * 小程序登录, 返回oauth的token
-     */
-    async userServiceLogin(requestParameters: UserServiceLoginRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<WxuserLoginResponse> {
-        const response = await this.userServiceLoginRaw(requestParameters, initOverrides);
-        return await response.value();
-    }
-
-    /**
-     */
-    async userServiceUpdateRaw(requestParameters: UserServiceUpdateOperationRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<WxuserUpdateResponse>> {
-        if (requestParameters.id === null || requestParameters.id === undefined) {
-            throw new runtime.RequiredError('id','Required parameter requestParameters.id was null or undefined when calling userServiceUpdate.');
-        }
-
-        if (requestParameters.body === null || requestParameters.body === undefined) {
-            throw new runtime.RequiredError('body','Required parameter requestParameters.body was null or undefined when calling userServiceUpdate.');
-        }
-
-        const queryParameters: any = {};
-
-        const headerParameters: runtime.HTTPHeaders = {};
-
-        headerParameters['Content-Type'] = 'application/json';
-
-        const response = await this.request({
-            path: `/wx.user.UserService/users/{id}`.replace(`{${"id"}}`, encodeURIComponent(String(requestParameters.id))),
-            method: 'PUT',
-            headers: headerParameters,
-            query: queryParameters,
-            body: UserServiceUpdateRequestToJSON(requestParameters.body),
-        }, initOverrides);
-
-        return new runtime.JSONApiResponse(response, (jsonValue) => WxuserUpdateResponseFromJSON(jsonValue));
-    }
-
-    /**
-     */
-    async userServiceUpdate(requestParameters: UserServiceUpdateOperationRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<WxuserUpdateResponse> {
-        const response = await this.userServiceUpdateRaw(requestParameters, initOverrides);
-        return await response.value();
-    }
-
-}
